--- a/Epam.SP.Kolodin.AchievementsPrj/Epam.SP.Kolodin.AchievementsPrj.BLL/Epam.SP.Kolodin.AchievementsPrj.BLL.csproj
+++ b/Epam.SP.Kolodin.AchievementsPrj/Epam.SP.Kolodin.AchievementsPrj.BLL/Epam.SP.Kolodin.AchievementsPrj.BLL.csproj
@@ -54,6 +54,13 @@
       <Project>{ba75cf72-5b76-431c-8596-1ce57eb5791f}</Project>
       <Name>Epam.SP.Kolodin.AchievementsPrj.DAL.Interface</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Epam.SP.Kolodin.AchievementsPrj.Entities\Epam.SP.Kolodin.AchievementsPrj.Entities.csproj">
+      <Project>{c606d45e-d081-4dd5-a293-9fc56f95b899}</Project>
+      <Name>Epam.SP.Kolodin.AchievementsPrj.Entities</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
