--- a/Epam.SP.Kolodin.AchievementsPrj/Epam.SP.Kolodin.AchievementsPrj.PL._Console/App.config
+++ b/Epam.SP.Kolodin.AchievementsPrj/Epam.SP.Kolodin.AchievementsPrj.PL._Console/App.config
@@ -3,7 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
-  <connectionStrings>
-    <add name="AchievementsPrjDB" connectionString="Data Source=DESKTOP-NLMIKG9\SQLEXPRESS;Initial Catalog=Achievements;Integrated Security =True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient"/>
-  </connectionStrings>
+    <connectionStrings>
+        <add name="AchievementsPrjDBHome" connectionString="Data Source=DESKTOP-NLMIKG9\SQLEXPRESS;Initial Catalog=Achievements;Integrated Security =True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient"/>
+        <add name="AchievementsPrjDBWorkPlace" connectionString="Data Source=WS-SRT02-4742\SQLEXPRESS;Initial Catalog=Achievements;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient"/>
+    </connectionStrings>
 </configuration>
